--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Stewart_John_S2433454</string>
-    <string name="title_main">MPD - Currency Convertor</string>
+    <string name="title_main">MPD - Currency Converter</string>
     <string name="button_load">Press to get data</string>
     <string name="search_hint">Search by code, name or country</string>
 </resources>
